name:                sat
version:             0.1.0.0
synopsis:            Tseitin transform and other tools for SAT solver
description:         Please see README.md
homepage:            https://github.com/githubuser/sat#readme
license:             BSD3
license-file:        LICENSE
author:              Juhani Bonsdorff
maintainer:          Juhani.Bonsdorff@gmail.com
copyright:           2016 Juhani Bonsdorff
category:            Logic
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Formula
  build-depends:       base >= 4.7 && < 5,
                       megaparsec >= 4.0
  default-language:    Haskell2010

executable sat-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sat
  default-language:    Haskell2010

test-suite sat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sat
